# SceneLib2

./: .gitignore  CMakeLists.txt  Doxyfile  LICENCE  README
data/: SceneLib2.cfg  known_patch0.pgm  known_patch1.pgm  known_patch2.pgm  known_patch3.pgm  target_ismar.eps
examples/: CMakeLists.txt  MonoSlamSceneLib1.cpp
scenelib2/: CMakeLists.txt  SceneLib2Config.cmake.in  camera.cpp  camera.h  feature.cpp  feature.h  feature_init_info.cpp  feature_init_info.h  feature_model.cpp  feature_model.h  full_feature_model.cpp  full_feature_model.h  kalman.cpp  kalman.h  monoslam.cpp  monoslam.h  motion_model.cpp  motion_model.h  part_feature_model.cpp  part_feature_model.h
scenelib2/framegrabber/: filegrabber.cpp  filegrabber.h  framegrabber.cpp  framegrabber.h  usbcamgrabber.cpp  usbcamgrabber.h
scenelib2/graphic/: graphictool.cpp  graphictool.h
scenelib2/improc/: improc.cpp  improc.h  search_multiple_overlapping_ellipses.cpp  search_multiple_overlapping_ellipses.h
scenelib2/support/: eigen_util.cpp  eigen_util.h  math_util.cpp  math_util.h  pangolin_util.cpp  pangolin_util.h
